src/typegraph/core-ng/src/runtimes/prisma/type_generation/snapshots/typegraph_core__runtimes__prisma__type_generation__test__find_unique Record out.snap
---
source: src/typegraph/core/src/runtimes/prisma/type_generation/mod.rs
expression: tp.print(out)
---
root: optional 'optional_49' #49
└─ item: struct 'Record_with_nested_count' #48
   ├─ [age]: optional 'optional_6' #6
   │  └─ item: integer #5
   ├─ [created_at]: string #0
   ├─ [id]: string #2
   └─ [name]: string #4
